--- a/styleregister.css
+++ b/styleregister.css
@@ -25,7 +25,26 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #fff;
     border-radius: 10px;
-    padding: 30px 40px; 
+    padding: 30px 40px;
+    text-align: center;
+}
+
+.image-container {
+    margin-top: 20px;
+    text-align: center;
+    position: relative;
+}
+
+#profile-image {
+    width: 200px;
+    height: auto;
+    border-radius: 50%; 
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.image-container:hover #profile-image {
+    transform: scale(1.1);
 }
 
 .wrapper h1 {
