--- a/styleregister.css
+++ b/styleregister.css
@@ -43,8 +43,18 @@ body {
     transition: transform 0.3s ease;
 }
 
+.image-container #profile-image{
+    width: 200px;
+    height: 200px;
+    background-size: cover;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
 .image-container:hover #profile-image {
     transform: scale(1.1);
+    content: url(camera.jpg);
 }
 
 .wrapper h1 {
