--- a/styleregister.css
+++ b/styleregister.css
@@ -35,13 +35,13 @@ body {
     position: relative;
 }
 
-#profile-image {
+/* #profile-image {
     width: 200px;
     height: auto;
     border-radius: 50%; 
     cursor: pointer;
     transition: transform 0.3s ease;
-}
+} */
 
 .image-container #profile-image{
     width: 200px;
