--- a/home.css
+++ b/home.css
@@ -1,17 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     font-family:"Poppins", sans-serif;
 }
 body{
-    display:flex;
     width: 100%;
-    height: 100vh;
-    background: url(pexels-patrik-felker-6220559.jpg) no-repeat;
-    background-size: cover;
-    background-position:center;
+    overflow-x: hidden;
+    background-color: #000;
+    
 
-
+}
+img{
+    width:100%;
 }
 nav{
     position: fixed;
@@ -53,7 +55,7 @@ nav .menu{
     font-size: 18px;
     font-weight: 500;
     padding: 8px 15px;
-    border-radius: 5px;
+    border-radius: 25px;
     transition: all 0.3s ease;
 }
 .menu ul li a:hover{
@@ -61,17 +63,46 @@ nav .menu{
     background:whitesmoke;
     color:#000000;
 }
+
+.backgroundcolor{
+    border: 2px solid rgba(255, 255, 255, .2);
+}
+
 .center{
     position: absolute;
-    top:52%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    margin-top: calc(50vh - 70px);
     width: 100%;
-    padding:0 20px;
     text-align: center;
+    height: 50vh;
 }
 .center .title{
     color: #fff;
     font-size:25px;
     font-weight:600;
 }
+
+.image_top{
+    position: absolute;
+    bottom:0;
+    left: 0;
+    width: 100vw;
+
+}
+.image_top img{
+    width: 100%;
+    vertical-align: bottom;
+
+}
+.heighttotal{
+    height: 1000px;
+}
+.howitworks{
+    top:100vh;
+    position: absolute;
+}
+.image_reserve{
+    width: 50%;
+
+}
+
+
