--- a/home.css
+++ b/home.css
@@ -122,9 +122,16 @@ nav .menu{
 }
 
 #howitworks{
-    top:100vh;
     position: absolute;
-    display: inline-flex;
+    top:100vh;
+
+}
+.divide{
+    width:100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    
 
 }
 .image_reserve{
@@ -132,19 +139,19 @@ nav .menu{
     
 
 }
-.reservation{
+.TextHowItWorks{
     width:50%;
     margin-left: 4vh;
     margin-right: 4vh;
     align-items: center;
 }
-.reservation h3{
+.TextHowItWorks h3{
     font-weight: bold;
     color:#fff;
     margin-top: 5vh;
     text-align: center;
 }
-.reservation p{
+.TextHowItWorks p{
     color:#fff;
     margin-top: 3vh;
     text-align: justify;
