--- a/stylelogin.css
+++ b/stylelogin.css
@@ -5,6 +5,7 @@
     padding:0;
     box-sizing: border-box;
     font-family:"Poppins", sans-serif;
+    scroll-behavior: smooth;
 }
 
 
@@ -16,6 +17,10 @@ body {
     background-size: cover;
     background-position: center;
 }
+img{
+    width:100%;
+}
+
 nav{
     position: fixed;
     background: #1b1b1b;
