--- a/home.css
+++ b/home.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+:target{
+    scroll-margin-top: 70px;
+}
 *{
     margin: 0;
     padding: 0;
