--- a/stylelogin.css
+++ b/stylelogin.css
@@ -23,7 +23,7 @@ img{
 
 nav{
     position: fixed;
-    background: #1b1b1b;
+    background-color: rgba(0,0,0,0.4);
     width: 100%;
     margin: auto;
     padding: 10px 0;
