--- a/styleregister.css
+++ b/styleregister.css
@@ -18,7 +18,7 @@ body {
 
 nav{
     position: fixed;
-    background: #1b1b1b;
+    background-color: rgba(0,0,0,0.4);
     width: 100%;
     margin: auto;
     padding: 10px 0;
