--- a/home.css
+++ b/home.css
@@ -13,12 +13,12 @@ body{
     width: 100%;
     overflow-x: hidden;
     background-color: #000;
-    
+}
 
-}
 img{
-    width:100%;
+    width: 100%;
 }
+
 nav{
     position: fixed;
     background-color: rgba(0,0,0,0.4);
@@ -43,6 +43,7 @@ nav .menu{
 }
 .menu ul{
     display: inline-flex;
+    align-items: center;
 }
 
 .menu ul li{
@@ -71,6 +72,21 @@ nav .menu{
     color:#000000;
 }
 
+.menu img {
+   
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
+.menu ul li a.backgroundcolor {
+    display: flex;
+    align-items: center;
+}
+
+.menu ul li a.backgroundcolor img {
+    margin-right: 10px;
+}
 
 .backgroundcolor{
     border: 2px solid rgba(255, 255, 255, .2);
