--- a/styleAccommodation.css
+++ b/styleAccommodation.css
@@ -85,7 +85,7 @@ nav .menu {
     margin: auto;
     height: 100%;
     margin-top: 20vh;
-    width: 90%;
+    width: 100%;
     background:transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
@@ -95,10 +95,40 @@ nav .menu {
     padding: 30px 40px; 
 }
 
+.cols_container {
+    max-width: 1200px;
+    margin: auto;
+    width: 90%;
+    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Adjust the column widths as needed */
+    gap: 50px;
+}
+
+.left_col {
+    padding: 15px 10px;
+    text-align: center;
+    max-width: 100%;
+    position: relative;
+    margin: 0 auto;
+}
+
+.right_col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 10px;
+    text-align: center;
+    max-width: 100%;
+    position: relative;
+    margin: 0 auto;
+}
+
 .wrapper h1 {
     font-size: 36px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .wrapper .input-box {
@@ -216,6 +246,7 @@ nav .menu {
     margin: 80px 0;
 }
 .wrapper .input-box select {
+    
     width: 100%;
     height: 100%;
     background: transparent;
@@ -229,6 +260,19 @@ nav .menu {
     box-sizing: border-box;
 }
 
+.wrapper .input-box select option {
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #000;
+    padding: 10px 20px; /* Adjust padding as needed */
+    box-sizing: border-box;
+}
 
 .wrapper .input-box button {
     width: 100%;
@@ -249,13 +293,16 @@ nav .menu {
     margin-top: 20px;
     text-align: center;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .image-container #accommod-image{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     background-size: cover;
-    border-radius: 50%;
+    border-radius: 0%;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
@@ -265,7 +312,7 @@ nav .menu {
     content: url(camera.jpg);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 600px) {    
     .menu .logo a {
         font-size: 5vw;
     }
