--- a/stylelogin.css
+++ b/stylelogin.css
@@ -63,6 +63,11 @@ nav .menu{
     text-align: center;
 }
 
+.wrapper h2 {
+    font-size: 15px;
+    text-align: center;
+}
+
 .wrapper .input-box {
     position: relative;
     width: 100%;
