--- a/profile.css
+++ b/profile.css
@@ -53,6 +53,17 @@ a{
     margin: 0 auto;
 }
 
+.header_wrapper .cols_container .left_col .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header_wrapper .cols_container .left_col .buttons button {
+    margin-bottom: 5px;
+}
+
+
 .header_wrapper .cols_container .left_col .image-container {
     position: absolute;
     top: -50px;
