--- a/applicationReservation.css
+++ b/applicationReservation.css
@@ -131,6 +131,29 @@ nav .menu{
     cursor: pointer;
     margin-top: 10px;
 }
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
+.input-box label{
+    font-weight: 200;
+}
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+}
+
+
 @media (max-width: 650px){
     .divide{
         
