--- a/findfriends.css
+++ b/findfriends.css
@@ -18,12 +18,13 @@ body {
     background: url(pexels-patrik-felker-6220559.jpg) no-repeat;
     background-size: cover;
     background-position: center;
+    align-items: center;
 }
 .find_friends_container{
-    height: 100%;
+    height: 70vh;
     margin-top: 20vh;
     margin-bottom: 20vh;
-    width: 350px;
+    width: 400px;;
     background:transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
@@ -34,35 +35,92 @@ body {
     text-align: center;
 }
 
+.find_friends_header{
+    color: #f1f1f1;
+    font-size: 18px;
+    font-weight: bolder;
+    width:100%;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.find_friends_body{
+    border: 2px solid rgba(255, 255, 255, .2);
+}
+
 .find_friends_container .find_friends_header .heading {
     font-size: 36px;
     text-align: center;
 }
 
-.find_friends_container .find_friends_header .search {
+.find_friends_header .search {
     position: relative;
-    width: 100%;
-    height: 50px;
-    margin:30px 0;
+    padding: 25px 0;
 }
 
-.find_friends_container .find_friends_header .search input{
-    width: 100%;
-    height: 100%;
+.find_friends_header .search i{
+    position: absolute;
+    width:20px;
+    top: 45px;
+    left: 40px;
+}
+
+.find_friends_header .search input{
     background: transparent;
     border: none;
     outline: none;
+    margin:0 25px 25px 25px;
+    width: calc(100% - 150px);
     border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 40px;
+    border-radius: 10px;
     font-size: 16px;
-    color: #fff;
-    padding: 20px 45px 20px 20px;
+    color: #f1f1f1;
+    padding: 15px 50px;
 }
 
-.find_friends_container .find_friends_header .search i{
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
+.find_friends_container .find_friends_header .search input::placeholder{
+    color:rgba(255, 255, 255, 0.5);
+}
+
+.user_row{
+    padding: 15px 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.user_info{
+    display: flex;
+    align-items: center;
+}
+
+.user_info img{
+    width: 70px;
+    border-radius: 50%;
+    margin-right: 15px;
+    border: 2px solid whitesmoke;
+}
+
+.user_info span{
+    font-weight: bold;
+}
+
+.action-follow{
+    border: 2px solid whitesmoke;
+    outline: none;
+    background: transparent;
+    border-radius: 20px;
+    color:#f1f1f1;
+    height: 40px;
+    width: 80px;
+    font-weight: bold;
+    transition: all 0.3s ease-in-out;
+    
+}
+
+.action-follow:hover{
+    background:whitesmoke;
+    color:#000000;
+    font-weight: bolder;
+    cursor: pointer;
 }
