--- a/applicationReservation.css
+++ b/applicationReservation.css
@@ -131,16 +131,16 @@ nav .menu{
     cursor: pointer;
     margin-top: 10px;
 }
-.input-box {
+.input_box {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
 }
-.input-box label{
+.input_box label{
     font-weight: 200;
 }
-.input-box input{
+.input_box input{
     width: 100%;
     height: 100%;
     background: transparent;
