--- a/styleReservations.css
+++ b/styleReservations.css
@@ -14,11 +14,13 @@ body {
     justify-content: center;
     min-height: 100vh;
     background: url(pexels-patrik-felker-6220559.jpg) no-repeat;
-    background-size: cover;
+    background-size:auto;
+    background-color: #000000;
     background-position: center;
 }
 img{
     width:100%;
+    height: 100%;
 }
 nav{
     position: fixed;
