--- a/profile.css
+++ b/profile.css
@@ -213,10 +213,12 @@ a{
 }
 
 .header_wrapper .cols_container .right_col .Home img{
-    max-width: 100%;
+    /* max-width: 100%; */
     display: block;
-    height: 100%;
+    height: 200px; /* Set a fixed height value */
+    width: 200px;
     object-fit: cover;
+    
 }
 
 @media (min-width: 868px){
