--- a/findfriends.css
+++ b/findfriends.css
@@ -108,9 +108,10 @@ body {
     display:flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
-.user_row form{
+.user_row .user_form{
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -121,6 +122,13 @@ body {
 .user_info{
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+.user_info button {
+    margin-left: auto;
+    margin-right: 40px;
 }
 
 .user_info img{
@@ -135,6 +143,8 @@ body {
     font-weight: bold;
 }
 
+
+
 .action-follow{
     border: 2px solid whitesmoke;
     outline: none;
@@ -145,7 +155,6 @@ body {
     width: 80px;
     font-weight: bold;
     transition: all 0.3s ease-in-out;
-    margin-left: 100px;
 }
 
 .action-follow:hover{
@@ -165,7 +174,6 @@ body {
     width: 80px;
     font-weight: bold;
     transition: all 0.3s ease-in-out;
-    margin-left: 100px;
 }
 
 .action-unfollow:hover{
