--- a/styleReservations.css
+++ b/styleReservations.css
@@ -46,6 +46,7 @@ nav .menu{
 }
 .menu ul{
     display: inline-flex;
+    align-items: center;
 }
 
 .menu ul li{
@@ -72,6 +73,19 @@ nav .menu{
     font-weight: 530;
     background:whitesmoke;
     color:#000000;
+}
+.menu ul li a.backgroundcolor {
+    display: flex;
+    align-items: center;
+}
+
+.menu ul li a.backgroundcolor img {
+    margin-right:10px;
+}
+.menu img {
+    width: 20px;
+    height: 20px;
+    border-radius:50%;
 }
 .center{
     position: absolute;
