--- a/applicationReservation.css
+++ b/applicationReservation.css
@@ -44,6 +44,7 @@ nav .menu{
 }
 .menu ul{
     display: inline-flex;
+    align-items: center;
 }
 
 .menu ul li{
@@ -76,10 +77,23 @@ nav .menu{
     width: 100%;
     margin: auto;
 }
+.menu ul li a.backgroundcolor {
+    display: flex;
+    align-items: center;
+}
+
+.menu ul li a.backgroundcolor img {
+    margin-right:10px;
+}
+.menu img {
+    width: 20px;
+    height: 20px;
+    border-radius:50%;
+}
 .wrapper {
     margin: auto;
-    height: 100%;
-    margin-top: 20vh;
+    height: 200%;
+    margin-top: 10vh;
     width: 90%;
     background:transparent;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -151,6 +165,24 @@ nav .menu{
     font-size: 16px;
     color: #fff;
     padding: 20px 45px 20px 20px;
+    color-scheme: dark;
+}
+
+.input_box select {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 10px 20px; 
+    box-sizing: border-box;
+}
+.input_box select option{
+    color:#000000;
 }
 
 
