--- a/styleAccommodation.css
+++ b/styleAccommodation.css
@@ -66,63 +66,41 @@ nav .menu {
     border-radius: 25px;
     transition: all 0.3s ease-in-out;
 }
+
+.menu ul li a.backgroundcolor {
+    display: flex;
+    align-items: center;
+}
+
+.menu ul li a.backgroundcolor img {
+    margin-right: 10px;
+}
+
 .menu ul li a:hover{
     font-weight: 530;
     background:whitesmoke;
     color:#000000;
 }
-.center {
-    /*display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 80vh;*/
-    position: absolute;
-    width: 40%;
-    margin: auto;
+
+.menu img {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
 }
 
 .wrapper {
-    margin: auto;
     height: 100%;
     margin-top: 20vh;
-    width: 100%;
+    margin-bottom: 20vh;
+    width: 500px;
     background:transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #fff;
     border-radius: 10px;
-    padding: 30px 40px; 
-}
-
-.cols_container {
-    max-width: 1200px;
-    margin: auto;
-    width: 90%;
-    justify-content: space-between;
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Adjust the column widths as needed */
-    gap: 50px;
-}
-
-.left_col {
-    padding: 15px 10px;
+    padding: 30px 40px;
     text-align: center;
-    max-width: 100%;
-    position: relative;
-    margin: 0 auto;
-}
-
-.right_col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 10px;
-    text-align: center;
-    max-width: 100%;
-    position: relative;
-    margin: 0 auto;
 }
 
 .wrapper h1 {
@@ -136,6 +114,7 @@ nav .menu {
     width: 100%;
     height: 50px;
     margin: 30px 0;
+    flex-direction: row;
 }
 
 .input-box input {
@@ -167,21 +146,6 @@ nav .menu {
     border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
-.wrapper .btn {
-    width: 100%;
-    height: 45px;
-    background: #fff;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 255, 0.1);
-    cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    font-weight: 600;
-    margin-top: 20px;
-}
-
 .wrapper .register-link {
     font-size: 14.5px;
     text-align: center;
@@ -199,7 +163,7 @@ nav .menu {
 }
 .wrapper label {
     font-size: 18px;
-    display: block;
+    display: flex;
     margin-top: 15px;
 }
 
@@ -228,15 +192,15 @@ nav .menu {
 .wrapper .privacy-choice {
     display: flex;
     align-items: center;
-    margin-bottom: 20px; /* Add margin-bottom for spacing */
+    margin-bottom: 20px;
 }
 
 .wrapper .privacy-choice label {
-    margin-right: 10px; /* Adjust margin-right for spacing between label and input */
+    margin-right: 10px;
 }
 
 .wrapper .privacy-choice input {
-    margin-right: 5px; /* Adjust margin-right for spacing between input and label */
+    margin-right: 5px;
 }
 
 .wrapper .input-box-pp {
@@ -256,7 +220,7 @@ nav .menu {
     border-radius: 40px;
     font-size: 16px;
     color: #fff;
-    padding: 10px 20px; /* Adjust padding as needed */
+    padding: 10px 20px;
     box-sizing: border-box;
 }
 
@@ -270,12 +234,12 @@ nav .menu {
     border-radius: 40px;
     font-size: 16px;
     color: #000;
-    padding: 10px 20px; /* Adjust padding as needed */
+    padding: 10px 20px;
     box-sizing: border-box;
 }
 
 .wrapper .input-box button {
-    width: 100%;
+    width: 200px;
     height: 45px;
     background:transparent;
     border: 2px solid rgba(255, 255, 255, 0.2);
@@ -289,6 +253,21 @@ nav .menu {
     margin-top: 0px;
 }
 
+.wrapper .input-box button:hover {
+    width: 200px;
+    height: 45px;
+    background:whitesmoke;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 2055, 0.1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #000000;
+    font-weight: 600;
+    margin-top: 0px;
+}
+
 .image-container {
     margin-top: 20px;
     text-align: center;
@@ -296,20 +275,16 @@ nav .menu {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column ;
 }
 
-.image-container #accommod-image{
-    width: 150px;
-    height: 150px;
-    background-size: cover;
-    border-radius: 0%;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+.image-container input{
+    margin-left: 50px ;
+    margin-top: 10px;
 }
 
-.image-container:hover #accommod-image {
-    transform: scale(1.1);
-    content: url(camera.jpg);
+.input-box button{
+    width: min-content;
 }
 
 @media (max-width: 600px) {    
