--- a/findfriends.css
+++ b/findfriends.css
@@ -29,7 +29,7 @@ nav{
     width: 100%; 
     padding: 10px 0;
     z-index: 12;
-    margin-top: -900px;
+    top:0;
 }
 nav .menu{
     max-width: 1250px;
