--- a/style_city.css
+++ b/style_city.css
@@ -47,7 +47,7 @@ nav .menu{
 .wrapper {
     height: 100%;
     margin-top: 20vh;
-    width: 350px;
+    width: 800px;
     background:transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
@@ -68,13 +68,19 @@ nav .menu{
     text-align: center;
 }
 
+.wrapper h3 {
+    font-size: 30px;
+    text-align: center;
+    margin-top: 50px;
+}
+
 
 .wrapper .data h4{
     display: flow-root;
     width: 50%;
     align-items: center;
     margin-top: 5%;
-    font-size: 15px;
+    font-size: 23px;
 }
 
 .backgroundcolor{
